--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
           sudo apt update
           sudo apt install -y libncurses5 python2.7 libpython2.7 gettext \
             libkf5itemmodels5 libkf5kiowidgets5 libkchart2 dbus-x11 gnome-keyring
-          curl https://download.tizen.org/sdk/Installer/tizen-studio_5.6/web-cli_Tizen_Studio_5.6_ubuntu-64.bin -o install.bin
+          curl https://download.tizen.org/sdk/Installer/tizen-studio_6.0/web-cli_Tizen_Studio_6.0_ubuntu-64.bin -o install.bin
           chmod a+x install.bin
           ./install.bin --accept-license $HOME/tizen-studio
           rm install.bin
@@ -69,11 +69,11 @@ jobs:
           export PATH=`pwd`/flutter-tizen/bin:$PATH
           echo $PATH >> $GITHUB_PATH
           flutter-tizen doctor -v
-      - name: Build native TPK
-        run: |
-          flutter-tizen create --tizen-language cpp native_app
-          cd native_app
-          flutter-tizen build tpk -pcommon --debug
+      # - name: Build native TPK
+      #   run: |
+      #     flutter-tizen create --tizen-language cpp native_app
+      #     cd native_app
+      #     flutter-tizen build tpk -pcommon --debug
       - name: Build .NET TPK
         run: |
           flutter-tizen create --tizen-language csharp dotnet_app
