--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,12 +58,14 @@ jobs:
             IOT-Headed-6.0-NativeAppDevelopment-CLI
       - name: Create a Tizen certificate profile
         run: |
+          dbus-run-session -- bash 
+          gnome-keyring-daemon --unlock
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin
-          tizen certificate -a test -p tizen123 -f tizen
+          tizen certificate -a tizen -p tizen -f tizen
           tizen security-profiles add \
             -n tizen \
             -a $HOME/tizen-studio-data/keystore/author/tizen.p12 \
-            -p tizen123
+            -p tizen
       - name: Set up flutter-tizen
         run: |
           export PATH=`pwd`/flutter-tizen/bin:$PATH
