--- a/templates/ui-app/csharp/Runner.csproj
+++ b/templates/ui-app/csharp/Runner.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Tizen.NET.Sdk/1.1.7">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>tizen80</TargetFramework>
+    <TargetFramework>net6.0-tizen8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
