--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,6 +78,8 @@ jobs:
       #     flutter-tizen create --tizen-language cpp native_app
       #     cd native_app
       #     flutter-tizen build tpk -pcommon --debug
+      - name: Install Tizen Workload
+        run: curl -sSL https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.sh | sudo bash
       - name: Build .NET TPK
         run: |
           flutter-tizen create --tizen-language csharp dotnet_app
