--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,8 @@ jobs:
         run: |
           $HOME/tizen-studio/package-manager/package-manager-cli.bin install \
             NativeToolchain-Gcc-9.2 \
-            IOT-Headed-6.0-NativeAppDevelopment-CLI
+            IOT-Headed-6.0-NativeAppDevelopment-CLI \
+            TIZEN-8.0-NativeAppDevelopment-CLI
       - name: Create a Tizen certificate profile
         run: |
           dbus-run-session -- bash 
