--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,6 +61,7 @@ jobs:
         run: |
           dbus-run-session -- bash 
           echo tizen | gnome-keyring-daemon --unlock
+          ps -ef | grep "dbus-daemon --fork --session --address"
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin
           tizen certificate -a tizen -p tizen -f tizen
           cat /home/runner/tizen-studio-data/profile/profiles.xml
