--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,11 +59,11 @@ jobs:
             TIZEN-8.0-NativeAppDevelopment-CLI
       - name: Create a Tizen certificate profile
         run: |
-          #dbus-run-session -- bash 
-          #echo tizen | gnome-keyring-daemon --unlock
           dbus-daemon --fork --session --address=unix:abstract=/tmp/dbus-POnsU7G7Dp
           export DBUS_SESSION_BUS_ADDRESS=unix:abstract=/tmp/dbus-POnsU7G7Dp
           ps -ef | grep "dbus-daemon"
+          dbus-run-session -- bash 
+          echo tizen | gnome-keyring-daemon --unlock
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin
           tizen certificate -a tizen -p tizen -f tizen
           cat /home/runner/tizen-studio-data/profile/profiles.xml
