--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,11 +67,11 @@ jobs:
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin
           tizen certificate -a tizen -p tizen -f tizen
           cat /home/runner/tizen-studio-data/profile/profiles.xml
-          tizen security-profiles add \
-            -n tizen \
-            -a $HOME/tizen-studio-data/keystore/author/tizen.p12 \
-            -p tizen
-          cat /home/runner/tizen-studio-data/profile/profiles.xml
+          # tizen security-profiles add \
+          #   -n tizen \
+          #   -a $HOME/tizen-studio-data/keystore/author/tizen.p12 \
+          #   -p tizen
+          # cat /home/runner/tizen-studio-data/profile/profiles.xml
       - name: Set up flutter-tizen
         run: |
           export PATH=`pwd`/flutter-tizen/bin:$PATH
