--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,13 +68,13 @@ jobs:
           
           tz cert -n tizen -p tizen123 -f tizen
           #tizen certificate -a tizen -p tizen -f tizen
-          cat /home/runner/tizen-studio-data/profile/profiles.xml
+          #cat /home/runner/tizen-studio-data/profile/profiles.xml
           tz security-profiles add \
           # tizen security-profiles add \
             -n tizen \
             -a $HOME/tizen-studio-data/keystore/author/tizen.p12 \
             -p tizen123
-          cat /home/runner/tizen-studio-data/profile/profiles.xml
+          #cat /home/runner/tizen-studio-data/profile/profiles.xml
       - name: Set up flutter-tizen
         run: |
           export PATH=`pwd`/flutter-tizen/bin:$PATH
