--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,9 @@ jobs:
           
           tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
 
-          tizen build-cs --  HelloTNUIApp -s tizen
+          dotnet build -c Debug HelloTNUIApp
+          tizen package -t tpk -s tizen -- HelloTNUIApp/HelloTNUIApp/bin/Debug/net6.0-tizen8.0/org.tizen.example.HelloTNUIApp-1.0.0.tpk
+          #tizen build-cs --  HelloTNUIApp -s tizen
           
           tz build -w HelloTNUIApp/
           
