--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,10 +82,11 @@ jobs:
           tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
 
           dotnet build -c Debug HelloTNUIApp
+          echo "dotnet build finished"
           tizen package -t tpk -s tizen -- HelloTNUIApp/HelloTNUIApp/bin/Debug/net6.0-tizen8.0/org.tizen.example.HelloTNUIApp-1.0.0.tpk
           #tizen build-cs --  HelloTNUIApp -s tizen
-          
-          tz build -w HelloTNUIApp/
+          echo "tizen package finished"
+          #tz build -w HelloTNUIApp/
           
       # - name: Set up flutter-tizen
       #   run: |
