--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,29 +64,26 @@ jobs:
           #dbus-daemon --fork --session --address=unix:abstract=/tmp/dbus-POnsU7G7Dp
           #export DBUS_SESSION_BUS_ADDRESS=unix:abstract=/tmp/dbus-POnsU7G7Dp
           #ps -ef | grep "dbus-daemon"
-          #dbus-run-session -- bash 
-          #echo tizen | gnome-keyring-daemon --unlock
+          dbus-run-session -- bash 
+          echo tizen | gnome-keyring-daemon --unlock
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
           
           #tz cert -n tizen -p tizen123 -f tizen
-          tizen certificate -a test -p tizen -f test
-          cat /home/runner/tizen-studio-data/profile/profiles.xml
+          tizen certificate -a tizen -p tizen -f tizen
+          cat $HOME/tizen-studio-data/profile/profiles.xml
 
-          #tz security-profiles add \
-          tizen security-profiles add \
-            -n test \
-            -a $HOME/tizen-studio-data/keystore/author/test.p12 \
-            -p tizen
-          cat /home/runner/tizen-studio-data/profile/profiles.xml
+          #tz security-profiles add 
+          tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
+          cat $HOME/tizen-studio-data/profile/profiles.xml
           
           tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
 
           dotnet build -c Debug HelloTNUIApp
           echo "dotnet build finished"
-          #tizen package -t tpk -s test -- HelloTNUIApp/HelloTNUIApp/bin/Debug/net6.0-tizen8.0/org.tizen.example.HelloTNUIApp-1.0.0.tpk
+          #tizen package -t tpk -s tizen -- HelloTNUIApp/HelloTNUIApp/bin/Debug/net6.0-tizen8.0/org.tizen.example.HelloTNUIApp-1.0.0.tpk
           #tizen build-cs -- HelloTNUIApp -s tizen
           #echo "tizen package finished"
-          tz set -b Debug -s test -w  HelloTNUIApp
+          tz set -b Debug -s tizen -w  HelloTNUIApp
           echo  "tz set finished"
           tz build -w HelloTNUIApp/
           echo "tz build finished"
