--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,6 +75,10 @@ jobs:
           #tz security-profiles add 
           tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
           cat $HOME/tizen-studio-data/profile/profiles.xml
+
+          sed-i 's/***/password=""/g' $HOME/tizen-studio-data/profile/profiles.xml
+          echo "after sed!"
+          cat $HOME/tizen-studio-data/profile/profiles.xml
           
           tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
 
