--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
           sudo add-apt-repository ppa:deadsnakes/ppa
           sudo apt update
           sudo apt install -y libncurses5 python2.7 libpython2.7 gettext \
-            libkf5itemmodels5 libkf5kiowidgets5 libkchart2 dbus-x11 gnome-keyring
+            libkf5itemmodels5 libkf5kiowidgets5 libkchart2 gnome-keyring
           curl https://download.tizen.org/sdk/Installer/tizen-studio_6.0/web-cli_Tizen_Studio_6.0_ubuntu-64.bin -o install.bin
           chmod a+x install.bin
           ./install.bin --accept-license $HOME/tizen-studio
@@ -70,6 +70,7 @@ jobs:
           
           #tz cert -n tizen -p tizen123 -f tizen
           tizen certificate -a tizen -p tizen -f tizen
+          tizen certificate -a test -p 12345678 -f test
           cat $HOME/tizen-studio-data/profile/profiles.xml
 
           #tz security-profiles add 
@@ -82,8 +83,8 @@ jobs:
           
           tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
 
-          dotnet build -c Debug HelloTNUIApp
-          echo "dotnet build finished"
+          #dotnet build -c Debug HelloTNUIApp
+          #echo "dotnet build finished"
           #tizen package -t tpk -s tizen -- HelloTNUIApp/HelloTNUIApp/bin/Debug/net6.0-tizen8.0/org.tizen.example.HelloTNUIApp-1.0.0.tpk
           #tizen build-cs -- HelloTNUIApp -s tizen
           #echo "tizen package finished"
