--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,13 +69,13 @@ jobs:
           #gnome-keyring-daemon --start
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
 
-          eval "$(dbus-launch --sh-syntax)"
-          mkdir -p ~/.cache
-          mkdir -p ~/.local/share/keyrings # where the automatic keyring is created
+          #eval "$(dbus-launch --sh-syntax)"
+          #mkdir -p ~/.cache
+          #mkdir -p ~/.local/share/keyrings # where the automatic keyring is created
           # 1. Create the keyring manually with a dummy password in stdin
-          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
           # 2. Start the daemon, using the password to unlock the just-created keyring:
-          eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
+          #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
           
           #tz cert -n tizen -p tizen123 -f tizen
           tizen certificate -a tizen -p tizen -f tizen
