--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,8 +64,8 @@ jobs:
           #dbus-daemon --fork --session --address=unix:abstract=/tmp/dbus-POnsU7G7Dp
           #export DBUS_SESSION_BUS_ADDRESS=unix:abstract=/tmp/dbus-POnsU7G7Dp
           #ps -ef | grep "dbus-daemon"
-          dbus-run-session -- bash 
-          echo tizen | gnome-keyring-daemon --unlock
+          #dbus-run-session -- bash 
+          #echo tizen | gnome-keyring-daemon --unlock
           #gnome-keyring-daemon --start
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
 
@@ -73,9 +73,9 @@ jobs:
           #mkdir -p ~/.cache
           #mkdir -p ~/.local/share/keyrings # where the automatic keyring is created
           # 1. Create the keyring manually with a dummy password in stdin
-          #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
           # 2. Start the daemon, using the password to unlock the just-created keyring:
-          #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
+          eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
           
           #tz cert -n tizen -p tizen123 -f tizen
           tizen certificate -a tizen -p tizen -f tizen
