--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,8 +77,8 @@ jobs:
           # 2. Start the daemon, using the password to unlock the just-created keyring:
           #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
           dbus-launch --sh-syntax
-          echo tizen | gnome-keyring-daemon --unlock
-          echo tizen | gnome-keyring-daemon --start          
+          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           
           #tz cert -n tizen -p tizen123 -f tizen
           tizen certificate -a tizen -p tizen -f tizen
