--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
           #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
           # 2. Start the daemon, using the password to unlock the just-created keyring:
           #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
-          dbus-launch --sh-syntax
+          eval "$(dbus-launch --sh-syntax)"
           eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
           eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           
