--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,6 +79,9 @@ jobs:
           flutter-tizen build tpk -pcommon --debug
       - name: Build .NET TPK
         run: |
+          eval "$(dbus-launch --sh-syntax)"
+          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          eval "$(printf '\n' | gnome-keyring-daemon --start)"     
           flutter-tizen create --tizen-language csharp dotnet_app
           cd dotnet_app
           flutter-tizen build tpk -pcommon --debug
