--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,6 +120,12 @@ jobs:
       #   run: curl -sSL https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.sh | sudo bash
       - name: Build .NET TPK
         run: |
+          tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
+          tz set -b Debug -s tizen -w  HelloTNUIApp
+          echo  "tz set finished"
+          tz build -w HelloTNUIApp/
+          echo "tz build finished"
+          
           flutter-tizen create --tizen-language csharp dotnet_app
           cd dotnet_app
           flutter-tizen build tpk -pcommon --debug
