--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,6 +120,11 @@ jobs:
       #   run: curl -sSL https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.sh | sudo bash
       - name: Build .NET TPK
         run: |
+          cat $HOME/tizen-studio-data/profile/profiles.xml
+          export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
+          tizen certificate -a tizen -p tizen -f tizen
+          tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
+          cat $HOME/tizen-studio-data/profile/profiles.xml
           tz new -t TizenNUIApp -n HelloTNUIApp -T dotnet -p tizen-8.0 -w .
           tz set -b Debug -s tizen -w  HelloTNUIApp
           echo  "tz set finished"
