--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -122,6 +122,9 @@ jobs:
         run: |
           cat $HOME/tizen-studio-data/profile/profiles.xml
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
+          eval "$(dbus-launch --sh-syntax)"
+          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           #tizen certificate -a tizen -p tizen -f tizen
           #tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
           #cat $HOME/tizen-studio-data/profile/profiles.xml
