--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,6 +74,9 @@ jobs:
           flutter-tizen doctor -v
       - name: Build native TPK
         run: |
+          eval "$(dbus-launch --sh-syntax)"
+          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          eval "$(printf '\n' | gnome-keyring-daemon --start)"  
           flutter-tizen create --tizen-language cpp native_app
           cd native_app
           flutter-tizen build tpk -pcommon --debug
