--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,9 +59,9 @@ jobs:
       - name: Create a Tizen certificate profile
         run: |
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin
-          eval "$(dbus-launch --sh-syntax)"
-          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"     
+          #eval "$(dbus-launch --sh-syntax)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --start)"     
           tizen certificate -a tizen -p tizen -f tizen
           tizen security-profiles add \
             -n tizen \
