--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,9 +76,9 @@ jobs:
           #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
           # 2. Start the daemon, using the password to unlock the just-created keyring:
           #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
-          eval "$(dbus-launch --sh-syntax)"
+          eval "$(dbus-run-session -- bash)"
           eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
+          #eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           
           #tz cert -n tizen -p tizen123 -f tizen
           tizen certificate -a tizen -p tizen -f tizen
@@ -122,9 +122,9 @@ jobs:
         run: |
           #cat $HOME/tizen-studio-data/profile/profiles.xml
           #export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
-          eval "$(dbus-launch --sh-syntax)"
+          eval "$(dbus-run-session -- bash)"
           eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
+          #eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           #tizen certificate -a tizen -p tizen -f tizen
           #tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
           #cat $HOME/tizen-studio-data/profile/profiles.xml
