--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,7 @@ jobs:
           #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
           eval "$(dbus-run-session -- bash)"
           eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          #eval "$(printf '\n' | gnome-keyring-daemon --start)"          
+          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           
           #tz cert -n tizen -p tizen123 -f tizen
           tizen certificate -a tizen -p tizen -f tizen
@@ -124,7 +124,7 @@ jobs:
           #export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
           eval "$(dbus-run-session -- bash)"
           eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          #eval "$(printf '\n' | gnome-keyring-daemon --start)"          
+          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           #tizen certificate -a tizen -p tizen -f tizen
           #tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
           #cat $HOME/tizen-studio-data/profile/profiles.xml
