--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,17 +76,18 @@ jobs:
           #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
           # 2. Start the daemon, using the password to unlock the just-created keyring:
           #eval "$(printf '\n' | /usr/bin/gnome-keyring-daemon --start)"
-          eval "$(dbus-launch --sh-syntax)"
-          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           
-          #tz cert -n tizen -p tizen123 -f tizen
-          tizen certificate -a tizen -p tizen -f tizen
-          #tizen certificate -a test -p 12345678 -f test
-          cat $HOME/tizen-studio-data/profile/profiles.xml
-
-          #tz security-profiles add 
+          #eval "$(dbus-launch --sh-syntax)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --start)"          
+          
+          dbus-run-session -- bash -c "
+          echo tizen | gnome-keyring-daemon --unlock &&
+          export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin &&
+          tizen certificate -a tizen -p tizen -f tizen &&
           tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
+          "
+          
           #tizen security-profiles add -n test -a $HOME/tizen-studio-data/keystore/author/test.p12 -p 12345678
           cat $HOME/tizen-studio-data/profile/profiles.xml
 
@@ -122,9 +123,9 @@ jobs:
         run: |
           #cat $HOME/tizen-studio-data/profile/profiles.xml
           #export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
-          eval "$(dbus-launch --sh-syntax)"
-          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"          
+          #eval "$(dbus-launch --sh-syntax)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
+          #eval "$(printf '\n' | gnome-keyring-daemon --start)"          
           #tizen certificate -a tizen -p tizen -f tizen
           #tizen security-profiles add -n tizen -a $HOME/tizen-studio-data/keystore/author/tizen.p12 -p tizen
           #cat $HOME/tizen-studio-data/profile/profiles.xml
@@ -133,7 +134,11 @@ jobs:
           #echo  "tz set finished"
           #tz build -w HelloTNUIApp/
           #echo "tz build finished"
-          
+
           flutter-tizen create --tizen-language csharp dotnet_app
           cd dotnet_app
+          
+          dbus-run-session -- bash -c "
+          echo tizen | gnome-keyring-daemon --unlock &&
           flutter-tizen build tpk -pcommon --debug
+          "
