--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,14 +59,14 @@ jobs:
       - name: Create a Tizen certificate profile
         run: |
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin
-          eval "$(dbus-launch --sh-syntax)"
-          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"     
-          tizen certificate -a tizen -p tizen -f tizen
+          dbus-run-session -- bash -c "
+          echo tizen | gnome-keyring-daemon --unlock &&
+          tizen certificate -a tizen -p tizen -f tizen &&
           tizen security-profiles add \
             -n tizen \
             -a $HOME/tizen-studio-data/keystore/author/tizen.p12 \
             -p tizen
+          "
       - name: Set up flutter-tizen
         run: |
           export PATH=`pwd`/flutter-tizen/bin:$PATH
@@ -74,12 +74,12 @@ jobs:
           flutter-tizen doctor -v
       - name: Build native TPK
         run: |
-          eval "$(dbus-launch --sh-syntax)"
-          eval "$(printf '\n' | gnome-keyring-daemon --unlock)"
-          eval "$(printf '\n' | gnome-keyring-daemon --start)"  
           flutter-tizen create --tizen-language cpp native_app
           cd native_app
+          dbus-run-session -- bash -c "
+          echo tizen | gnome-keyring-daemon --unlock &&
           flutter-tizen build tpk -pcommon --debug
+          "
       - name: Build .NET TPK
         run: |
           eval "$(dbus-launch --sh-syntax)"
@@ -87,4 +87,7 @@ jobs:
           eval "$(printf '\n' | gnome-keyring-daemon --start)"     
           flutter-tizen create --tizen-language csharp dotnet_app
           cd dotnet_app
+          dbus-run-session -- bash -c "
+          echo tizen | gnome-keyring-daemon --unlock &&
           flutter-tizen build tpk -pcommon --debug
+          "
