--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,12 +51,20 @@ jobs:
           chmod a+x install.bin
           ./install.bin --accept-license $HOME/tizen-studio
           rm install.bin
+          export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
+          tizen version
+          tz --version
+          cat $HOME/tizen-studio/sdk.version
       - name: Install Tizen Studio packages
         run: |
           $HOME/tizen-studio/package-manager/package-manager-cli.bin install \
             NativeToolchain-Gcc-9.2 \
             IOT-Headed-6.0-NativeAppDevelopment-CLI \
             TIZEN-8.0-NativeAppDevelopment-CLI
+          export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
+          tizen version
+          tz --version
+          cat $HOME/tizen-studio/sdk.version
       - name: Install Tizen Workload
         run: curl -sSL https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.sh | sudo bash            
       - name: Create a Tizen certificate profile
@@ -135,9 +143,9 @@ jobs:
           #tz build -w HelloTNUIApp/
           #echo "tz build finished"
 
-          cat $HOME/tizen-studio/sdk.version
           tizen version
           tz --version
+          #cat $HOME/tizen-studio/sdk.version
           
           flutter-tizen create --tizen-language csharp dotnet_app
           cd dotnet_app
