--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,8 +59,8 @@ jobs:
         run: |
           $HOME/tizen-studio/package-manager/package-manager-cli.bin install \
             NativeToolchain-Gcc-9.2 \
-            IOT-Headed-6.0-NativeAppDevelopment-CLI \
-            TIZEN-8.0-NativeAppDevelopment-CLI
+            IOT-Headed-6.0-NativeAppDevelopment-CLI
+            #TIZEN-8.0-NativeAppDevelopment-CLI
           export PATH=$PATH:$HOME/tizen-studio/tools/ide/bin:$HOME/tizen-studio/tools/tizen-core
           tizen version
           tz --version
